* Makefile.am, bootstrap, clcommit.m4sh, libtoolize.m4sh, config/ltmain.m4sh: Replace `set --' with `set dummy [...]; shift' for portability.  tests/sh.test: Test for this.

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,7 +35,7 @@ edit = sed \
 	-e 's,@host_triplet\@,$(host_triplet),g' \
 	-e "s,@configure_input\@,Generated from $$input; do not edit by hand,g"
 
-timestamp = set -- `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; \
+timestamp = set dummy `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; shift; \
 	case $(VERSION) in \
 	  *[acegikmoqsuwy]) TIMESTAMP=" $$1 $$2 $$3" ;; \
 	  *) TIMESTAMP="" ;; \
@@ -74,7 +74,7 @@ aclocal_DATA = m4/argz.m4 m4/libtool.m4 m4/ltdl.m4 \
 MKSTAMP = $(SHELL) $(top_srcdir)/config/mkstamp
 $(top_srcdir)/stamp-vcl: vcl-tmp clean-ltmain-sh ChangeLog
 vcl-tmp:
-	@set -- `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; \
+	@set dummy `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; shift; \
 	echo "$$1" > vcl.tmp; \
 	cmp -s vcl.tmp $(top_srcdir)/stamp-vcl \
 	  || (echo "Updating stamp-vcl"; cp vcl.tmp $(top_srcdir)/stamp-vcl)
@@ -97,7 +97,7 @@ clean-ltmain-sh:
 # how ltversion.m4 appears in our dependencies.
 EXTRA_DIST += m4/ltversion.in m4/ltversion.m4
 $(top_srcdir)/m4/ltversion.m4: m4/ltversion.in configure.ac $(top_srcdir)/stamp-vcl
-	set -- `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; \
+	set dummy `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; shift; \
 	cd $(top_srcdir); \
 	rm -f m4/ltversion.tmp; \
 	serial=`echo $$1 | sed 's,^1[.],,g'`; \
