--- a/m4/ltversion.in
+++ b/m4/ltversion.in
@@ -1,4 +1,12 @@
 # ltversion.m4 -- version numbers			-*- Autoconf -*-
+#
+# Copyright (C) 2004 Free Software Foundation, Inc.
+# Written by Scott James Remnant.
+#
+## This file is free software; the Free Software Foundation gives
+# unlimited permission to copy and/or distribute it, with or without
+# modifications, as long as this notice is preserved.
+
 # @configure_input@
 
 # serial @MACRO_SERIAL@
