* config/ltmain.m4sh (func_mode_link): Fix inherited_linker_flags so it puts it on the link line when linking shared libraries as well as when linking executables. * tests/inherited_flags.at: test inherited_linker_flags. * tests/Makefile.am: Add test. * tests/testsuite.at: Add test. Reported by: Albert Chin-A-Young <china@thewrittenword.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -24,7 +24,8 @@
 TESTSUITE	= testsuite
 TESTSUITE_AT	= testsuite.at \
 		  am-subdir.at \
-		  functests.at
+		  functests.at \
+		  inherited_flags.at
 
 EXTRA_DIST	= $(TESTSUITE) $(TESTSUITE_AT) package.m4
 
