* libltdl/Makefile.am: Add $(AM_LDFLAGS) to all per-target variables *_LDFLAGS as per CVS Automake semantic change.

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -42,7 +42,7 @@ libdlloader_la_SOURCES  = libltdl/lt_error.h lt_error.c \
 			  libltdl/lt__glibc.h \
 			  libltdl/lt__dirent.h \
 			  libltdl/slist.h slist.c
-libdlloader_la_LDFLAGS	= $(VERSION_INFO)
+libdlloader_la_LDFLAGS	= $(AM_LDFLAGS) $(VERSION_INFO)
 libdlloader_la_LIBADD	= $(LTLIBOBJS)
 
 ## Libltdl brings it all together:
@@ -60,12 +60,12 @@ endif
 libltdl_la_SOURCES	= ltdl.h ltdl.c \
 			  libltdl/lt_dlloader.h lt_dlloader.c loaders/preopen.c
 libltdl_la_CPPFLAGS	= -DLTDLOPEN=libltdl $(AM_CPPFLAGS)
-libltdl_la_LDFLAGS	=  $(VERSION_INFO) $(LT_DLPREOPEN)
+libltdl_la_LDFLAGS	= $(AM_LDFLAGS) $(VERSION_INFO) $(LT_DLPREOPEN)
 libltdl_la_LIBADD	= libdlloader.la
 
 libltdlc_la_SOURCES	= $(libltdl_la_SOURCES) $(libdlloader_la_SOURCES)
 libltdlc_la_CPPFLAGS	= -DLTDLOPEN=libltdlc $(AM_CPPFLAGS)
-libltdlc_la_LDFLAGS	= -weak libdlloader.la $(LT_DLPREOPEN)
+libltdlc_la_LDFLAGS	= $(AM_LDFLAGS) -weak libdlloader.la $(LT_DLPREOPEN)
 libltdlc_la_LIBADD	= $(libdlloader_la_LIBADD)
 
 ## These are installed as a subdirectory of pkgdatadir so that
