* ltmain.in, libtoolize.in: Exit with nonzero status on write failures with --help or --version or, in case of ltmain, --config or --features.

--- a/libtoolize.in
+++ b/libtoolize.in
@@ -82,7 +82,7 @@ You must \`cd' to the top directory of your package before you run
 
 Report bugs to <bug-libtool@gnu.org>.
 EOF
-    exit 0
+    exit $?
     ;;
 
   --version)
@@ -91,7 +91,7 @@ EOF
     echo "Copyright (C) 2003 Free Software Foundation, Inc."
     echo "This is free software; see the source for copying conditions.  There is NO"
     echo "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE."
-    exit 0
+    exit $?
     ;;
 
   --automake)
