--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -25,6 +25,7 @@ TESTSUITE	= testsuite
 TESTSUITE_AT	= testsuite.at \
 		  am-subdir.at \
 		  functests.at \
+		  stresstest.at \
 		  inherited_flags.at
 
 EXTRA_DIST	= $(TESTSUITE) $(TESTSUITE_AT) package.m4
