--- a/ltmain.in
+++ b/ltmain.in
@@ -1525,6 +1525,8 @@ EOF
 
      -mt|-mthreads|-kthread|-Kthread|-pthread|-pthreads|--thread-safe)
 	compiler_flags="$compiler_flags $arg"
+	compile_command="$compile_command $arg"
+	finalize_command="$finalize_command $arg"
 	continue
 	;;
 
