Peter O'Gorman  <peter@pogma.com>
* Makefile.am (web-manual): Use makeinfo, not texi2html.

--- a/Makefile.am
+++ b/Makefile.am
@@ -87,7 +87,7 @@ uninstall-local:
 ##  not to anybody else (inspiration from automake/Makefile.am).    ##
 ## ---------------------------------------------------------------- ##
 
-TEXI2HTML = texi2html
+MAKEINFO = makeinfo
 
 .PHONY: cvs-release
 cvs-release: version-check prev-tarball cvs-news fetch cvs-commit cvs-dist deltas web-manual
@@ -270,6 +270,6 @@ delta-xdelta: prev-tarball new-tarball got-xdelta
 
 .PHONY: web-manual
 web-manual:
-	@$(LN_S) $(top_srcdir)/doc/libtool.texi manual.texi
-	$(TEXI2HTML) -I $(top_srcdir)/doc -monolithic -number -verbose manual.texi
-	@rm -f manual.texi
+	$(MAKEINFO) -I $(top_srcdir)/doc --html --no-split -o manual.html \
+	$(top_srcdir)/doc/libtool.texi
+
