* libltdl/Makefile.am (install-data-local): Don't forget about $(DESTDIR).

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -80,9 +80,10 @@ ltdldatafiles		= COPYING.LIB Makefile.am README configure.ac \
 ## To avoid spurious reconfiguration when the user installs these files
 ## with libtoolize, we have to preserve their timestamps carefully:
 install-data-local:
-	$(mkinstalldirs) $(ltdldatadir)
+	-rm -rf $(DESTDIR)$(ltdldatadir)
+	$(mkinstalldirs) $(DESTDIR)$(ltdldatadir)
 	$(AMTAR) cf - $(ltdldatafiles) \
-	  | ( cd $(ltdldatadir) && $(AMTAR) xf -; )
+	  | ( cd $(DESTDIR)$(ltdldatadir) && $(AMTAR) xf -; )
 
 ## Make sure these will be cleaned even when they're not built by default:
 CLEANFILES		= libltdl.la libltdlc.la libdlloader.la
