--- a/libtoolize.in
+++ b/libtoolize.in
@@ -1,7 +1,7 @@
 #! /bin/sh
 # libtoolize - Prepare a package to use libtool.
 # @configure_input@
-# Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2003
+# Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2003, 2005
 # Free Software Foundation, Inc.
 # Originally by Gordon Matzigkeit <gord@gnu.ai.mit.edu>, 1996
 #
@@ -46,8 +46,9 @@ dry_run=no
 help="Try \`$progname --help' for more information."
 rm="rm -f"
 ln_s="@LN_S@"
-cp="cp -f"
+cp="cp -f -p"
 mkdir="mkdir"
+tar="tar"
 
 # Global variables.
 automake=
@@ -114,6 +115,7 @@ EOF
       test -n "$ln_s" && ln_s="echo $ln_s"
       cp="echo $cp"
       mkdir="echo mkdir"
+      tar="echo $tar"
     fi
     ;;
 
@@ -291,6 +293,8 @@ for file in $ltdlfiles; do
 
   $rm $file
   if test -n "$ln_s" && $ln_s $pkgdatadir/$file $file; then :
+  elif { ( cd $pkgdatadir && $tar cf - $file 2> /dev/null; ) \
+      | $tar xf - > /dev/null 2>&1; } ; then :
   elif $cp $pkgdatadir/$file $file; then :
   else
     echo "$progname: cannot copy \`$pkgdatadir/$file' to \`$file'" 1>&2
@@ -308,7 +312,9 @@ if test "x$ltdl_tar" = x"yes"; then
     $mkdir libltdl
     ltdlfiles=`cd $pkgdatadir && ls libltdl/*`
     for file in $ltdlfiles; do
-      if $cp $pkgdatadir/$file $file; then :
+      if { ( cd $pkgdatadir && $tar cf - $file 2> /dev/null; ) \
+          | $tar xf - > /dev/null 2>&1; } ; then :
+      elif $cp $pkgdatadir/$file $file; then :
       else
 	echo "$progname: cannot copy \`$pkgdatadir/$file' to \`$file'" 1>&2
 	status=1
@@ -316,7 +322,9 @@ if test "x$ltdl_tar" = x"yes"; then
       fi
     done
     for file in $files; do
-      if $cp $pkgdatadir/$file libltdl/$file; then :
+      if { ( cd $pkgdatadir && $tar cf - $file 2> /dev/null; ) \
+          | ( cd libltdl && $tar xf - > /dev/null 2>&1; ) } ; then :
+      elif $cp $pkgdatadir/$file libltdl/$file; then :
       else
 	echo "$progname: cannot copy \`$pkgdatadir/$file' to \`libltdl/$file'" 1>&2
 	status=1
@@ -343,6 +351,8 @@ for file in $files; do
 
   $rm $file
   if test -n "$ln_s" && $ln_s $pkgdatadir/$file $file; then :
+  elif { ( cd $pkgdatadir && $tar cf - $file 2> /dev/null; ) \
+      | $tar xf - > /dev/null 2>&1; } ; then :
   elif $cp $pkgdatadir/$file $file; then :
   else
     echo "$progname: cannot copy \`$pkgdatadir/$file' to \`$file'" 1>&2
