* libtoolize.m4sh (func_copy_cb): Use tar chof to avoid symlink attacks. * libltdl/Makefile.am (install-data-local): Ditto.

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -37,5 +37,5 @@ ltdldatadir = $(datadir)/libtool/libltdl
 install-data-local:
 	-rm -rf $(DESTDIR)$(ltdldatadir)
 	$(mkinstalldirs) $(DESTDIR)$(ltdldatadir)
-	$(AMTAR) cf - $(DISTFILES) \
+	$(AMTAR) chof - $(DISTFILES) \
 	  | ( cd $(DESTDIR)$(ltdldatadir) && $(AMTAR) xf -; )
