* libltdl/Makefile.am (install-data-local): Don't force v7 tar format with the `o' flag in create mode. Set the umask to 0 when untarring to avoid copied files taking their mode from the installer's umask. * libtoolize.m4sh (func_copy_cb): Ditto. Ignore errors from failed `cd' in the tar processes, since we may be running in dryrun mode. * libltdl/Makefile.am (ltdldatafiles): List all files needed to build a newly libtoolize installed libltdl directory even if the parent project doesn't use autoconf and automake. Reported by Noah Misch <noah@cs.caltech.edu>, 	Bob Friesenhahn <bfriesen@simple.dallas.tx.us>

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -31,11 +31,19 @@ $(libltdl_la_OBJECTS) $(libltdlc_la_OBJECTS): libtool
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
 
+## These are installed as a subdirectory of pkgdatadir so that
+## libtoolize --ltdl can find them later:
+ltdldatadir = $(datadir)/libtool/libltdl
+ltdldatafiles = COPYING.LIB README acinclude.m4 aclocal.m4 \
+		Makefile.am Makefile.in configure.ac configure \
+		config-h.in config.guess config.sub \
+		install-sh missing ltmain.sh \
+		ltdl.c ltdl.h
+
 ## To avoid spurious reconfiguration when the user installs these files
 ## with libtoolize, we have to preserve their timestamps carefully:
-ltdldatadir = $(datadir)/libtool/libltdl
 install-data-local:
 	-rm -rf $(DESTDIR)$(ltdldatadir)
 	$(mkinstalldirs) $(DESTDIR)$(ltdldatadir)
-	$(AMTAR) chof - $(DISTFILES) \
-	  | ( cd $(DESTDIR)$(ltdldatadir) && $(AMTAR) xf -; )
+	( cd $(srcdir) && $(AMTAR) chf - $(ltdldatafiles); ) \
+	  | ( umask 0 && cd $(DESTDIR)$(ltdldatadir) && $(AMTAR) xf -; )
