--- a/libtoolize.in
+++ b/libtoolize.in
@@ -293,8 +293,8 @@ for file in $ltdlfiles; do
 
   $rm $file
   if test -n "$ln_s" && $ln_s $pkgdatadir/$file $file; then :
-  elif { ( cd $pkgdatadir && $tar chof - $file 2> /dev/null; ) \
-      | $tar xf - > /dev/null 2>&1; } ; then :
+  elif { ( cd $pkgdatadir 2>/dev/null && $tar chf - $file 2> /dev/null; ) \
+      | ( umask 0 && $tar xf - > /dev/null 2>&1; ) } ; then :
   elif $cp $pkgdatadir/$file $file; then :
   else
     echo "$progname: cannot copy \`$pkgdatadir/$file' to \`$file'" 1>&2
@@ -312,8 +312,8 @@ if test "x$ltdl_tar" = x"yes"; then
     $mkdir libltdl
     ltdlfiles=`cd $pkgdatadir && ls libltdl/*`
     for file in $ltdlfiles; do
-      if { ( cd $pkgdatadir && $tar cf - $file 2> /dev/null; ) \
-          | $tar xf - > /dev/null 2>&1; } ; then :
+      if { ( cd $pkgdatadir 2>/dev/null && $tar chf - $file 2> /dev/null; ) \
+          | ( umask 0 && $tar xf - > /dev/null 2>&1; ) } ; then :
       elif $cp $pkgdatadir/$file $file; then :
       else
 	echo "$progname: cannot copy \`$pkgdatadir/$file' to \`$file'" 1>&2
@@ -322,8 +322,8 @@ if test "x$ltdl_tar" = x"yes"; then
       fi
     done
     for file in $files; do
-      if { ( cd $pkgdatadir && $tar cf - $file 2> /dev/null; ) \
-          | ( cd libltdl && $tar xf - > /dev/null 2>&1; ) } ; then :
+      if { ( cd $pkgdatadir 2>/dev/null && $tar chf - $file 2> /dev/null; ) \
+          | ( umask 0 && cd libltdl 2>/dev/null && $tar xf - > /dev/null 2>&1; ) } ; then :
       elif $cp $pkgdatadir/$file libltdl/$file; then :
       else
 	echo "$progname: cannot copy \`$pkgdatadir/$file' to \`libltdl/$file'" 1>&2
@@ -351,8 +351,8 @@ for file in $files; do
 
   $rm $file
   if test -n "$ln_s" && $ln_s $pkgdatadir/$file $file; then :
-  elif { ( cd $pkgdatadir && $tar cf - $file 2> /dev/null; ) \
-      | $tar xf - > /dev/null 2>&1; } ; then :
+  elif { ( cd $pkgdatadir 2>/dev/null && $tar chf - $file 2> /dev/null; ) \
+      | ( umask 0 && $tar xf - > /dev/null 2>&1; ) } ; then :
   elif $cp $pkgdatadir/$file $file; then :
   else
     echo "$progname: cannot copy \`$pkgdatadir/$file' to \`$file'" 1>&2
