* tests/Makefile (clean-local): Only run the testsuite cleanup if the testsuite has been generated.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -60,7 +60,8 @@ installcheck-local:
 
 # We need to remove any file droppings left behind by testsuite
 clean-local: clean-local-legacy
-	$(SHELL) $(srcdir)/$(TESTSUITE) --clean
+	test -f $(srcdir)/$(TESTSUITE) && \
+	  $(SHELL) $(srcdir)/$(TESTSUITE) --clean
 
 DISTCLEANFILES = atconfig
 
