--- a/configure.ac
+++ b/configure.ac
@@ -118,7 +118,7 @@ dnl We use m4sh to generate libtool's portable shell scripts
 AC_SUBST([M4SH], ['autom4te -l m4sh'])
 
 dnl Make sure config.status is regenerated when the version timestamp changes
-AC_SUBST([CONFIG_STATUS_DEPENDENCIES], ['$(top_builddir)/stamp-vcl'])
+AC_SUBST([CONFIG_STATUS_DEPENDENCIES], ['$(top_srcdir)/stamp-vcl'])
 
 ## ------------------------------- ##
 ## Libtool specific configuration. ##
